Add E-Mail address

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 This is a "plugin" for the Video Disk Recorder (VDR).
 
-Written by:                  Your Name <email@host.dom>
+Written by:                  Ulrich Eckhardt <uli-vdr@uli-eckhardt.de>
 
 Project's homepage:          http://www.uli-eckhardt.de/vdr
 
