--- a/HISTORY
+++ b/HISTORY
@@ -15,3 +15,7 @@ VDR Plugin 'trayopenng' Revision History
 - Support for new make system of VDR 1.7.35. The new make file is now the 
   default. For compiling on older VDR Versions change the links of Makefile,
   Makefile.inc and detector/Makefile to the *-1.6 versions.
+  
+2013-02-12: Version 1.0.1
+
+- Additional Makefile fixes for VDR 1.7.36
