--- a/po/de_DE.po
+++ b/po/de_DE.po
@@ -1,5 +1,5 @@
 # VDR trayopenng plugin language source file.
-# Copyright (C) 2009 Ulrich Eckhardt <uli-vdr@uli-eckhardt.de>
+# Copyright (C) 2009-2012 Ulrich Eckhardt <uli-vdr@uli-eckhardt.de>
 # This file is distributed under the same license as the VDR package.
 # Ulrich Eckhardt
 #
@@ -7,19 +7,20 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.7.x\n"
 "Report-Msgid-Bugs-To: <see README>\n"
-"POT-Creation-Date: 2010-04-02 17:58+0200\n"
-"PO-Revision-Date: 2010-04-02 17:05+0200\n"
+"POT-Creation-Date: 2013-02-12 16:59+0100\n"
+"PO-Revision-Date: 2013-02-02 16:59+0100\n"
 "Last-Translator: Ulrich Eckhardt <uli-vdr@uli-eckhardt.de>\n"
 "Language-Team: German\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-15\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 msgid "Show in main menu"
-msgstr "Im Hauptmenü anzeigen"
+msgstr "Im HauptmenÃ¼ anzeigen"
 
 msgid "Trayopenng"
 msgstr ""
 
 msgid "Open and close tray of CDROM"
-msgstr "Laufwerk öffnen und schließen "
+msgstr "Laufwerk Ã¶ffnen und schlieÃŸen "
