--- a/po/it_IT.po
+++ b/po/it_IT.po
@@ -7,10 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.7.x\n"
 "Report-Msgid-Bugs-To: <see README>\n"
-"POT-Creation-Date: 2010-04-02 17:58+0200\n"
+"POT-Creation-Date: 2013-02-12 16:59+0100\n"
 "PO-Revision-Date: 2010-08-09 23:55+0100\n"
 "Last-Translator: Diego Pierotto <vdr-italian@tiscali.it>\n"
 "Language-Team: \n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -26,4 +27,3 @@ msgstr "Apertura vassoio"
 
 msgid "Open and close tray of CDROM"
 msgstr "Apre/Chiude il lettore CD/DVD-ROM"
-
